# test-pimesh

./: .gitignore  TODO.md
cli/: Cargo.toml
cli/src/: app.rs  db.rs  debug.rs  main.rs  tui.rs
daemon/: Cargo.toml  json_example.json
daemon/src/: db.rs  endpoints.rs  log.rs  main.rs  user.rs
scripts/: setup.sh
src/daemon/: Cargo.toml  Program.cs
src/daemon/src/: main.rs  user.rs
